resolved various issues from code review
Signed-off-by: Rene Scherer <rene@scherer-online.com>